--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,7 @@
-{"service_account_key_file": "somepath/key.json",
-"token": "some_value",
-"cloud-id": "some_value",
-"folder-id": "some_value",
-"source_image_family": "some_value",
-"compute-default-zone": "some_value"}
+{
+    "service_account_key_file": "./key.examples.json",
+    "cloud-id": "CLOUD_ID",
+    "folder-id": "FOLDER_ID",
+    "source_image_family": "ubuntu-1604-lts",
+    "subnet_id": "SUBNET_ID"
+}
