--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,7 +1,7 @@
 {
     "service_account_key_file": "./key.examples.json",
-    "cloud-id": "CLOUD_ID",
-    "folder-id": "FOLDER_ID",
+    "cloud_id": "CLOUD_ID",
+    "folder_id": "FOLDER_ID",
     "source_image_family": "ubuntu-1604-lts",
     "subnet_id": "SUBNET_ID"
 }
