--- a/packer/keys.json.example
+++ b/packer/keys.json.example
@@ -1,5 +1,5 @@
 {
-    "service_account_key_file": "./key.examples.json",
+    "service_account_key_file": "~/key.json",
     "cloud_id": "CLOUD_ID",
     "folder_id": "FOLDER_ID",
     "source_image_family": "ubuntu-1604-lts",
