--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -8,4 +8,4 @@ subnet_id                = "<subnet_id>"
 service_account_key_file = "key.json"
 listener_port            = 80
 listener_target_port     = 9292
-insinstance_count        = 2
+instance_count        = 2
