--- a/.github/.pre-commit-config.yaml
+++ b/.github/.pre-commit-config.yaml
@@ -2,5 +2,5 @@
  - repo: https://github.com/pre-commit/pre-commit-hooks
  rev: v2.3.0
  hooks:
- - id: end-of-file-fixer
+ - id: end-of-files-fixer
  - id: trailing-whitespace
