--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -6,6 +6,6 @@ public_key_path          = "<public_key_path>"
 private_key_path         = "<private_key_path>"
 subnet_id                = "<subnet_id>"
 service_account_key_file = "key.json"
-listener_port            = 80
-listener_target_port     = 9292
-instance_count        = 2
+listener_port            = "80"
+listener_target_port     = "9292"
+instance_count           = "2"
