--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -1,7 +1,7 @@
-variables.json
-key.json
 *.tfstate
 *.tfstate.*.backup
 *.tfstate.backup
 *.tfvars
-.terraform
+.terraform/
+.idea/
+variables.json
